--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.4.0",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
