--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "split-type": "^0.3.3"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
