--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@motionone/utils": "^10.16.3",
     "circletype": "^2.3.0",
     "framer-motion": "^10.16.4",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
